bugfix concerning font on mobile and background color on labels

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,10 +5,10 @@
 
 html * {
   color: var(--primary-text) !important;
-  font-family: monospace;
+  font-family: courier;
 }
 
-html * :not(.form) {
+html * :not(.form):not(.form-label) {
   background-color: var(--primary-bg) !important;
 }
 
